# nanoinfer

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
backends/: backend.h
backends/cpu/: backend_cpu.cc
backends/cuda/: backend_cuda.cc
backends/cuda/kernels/: attn.cu  rmsnorm.cu  rope.cu
core/: allocator.cc  allocator.h  kv_cache.cc  kv_cache.h  model_ir.cc  model_ir.h  scheduler.cc  scheduler.h  tensor.cc  tensor.h
docs/: technical_design.md
include/nanoinfer/: nanoinfer.h
infer-py/: LICENSE  README.md  requirements.txt
infer-py/docs/: api_reference.md  inference_tutorial.md
infer-py/nanoinfer/engine/: __init__.py  inference.py
infer-py/nanoinfer/evaluation/: __init__.py  metrics.py
infer-py/nanoinfer/model/: factory.py  loader.py
infer-py/nanoinfer/tokenizer/: tokenizer.py
infer-py/scripts/: chat_server.py
models/: llama_config.cc  llama_config.h  sampler.h
nanoinfer/: __init__.py
nanoinfer/engine/: generator.py  sampling.py
nanoinfer/model/: __init__.py  base.py  config.py  gpt.py
nanoinfer/plugins/: __init__.py  optimizer.py
nanoinfer/tokenizer/: __init__.py
scripts/: chat_bench.py  chat_eval_infer.py  chat_infer.py
